# typst-quiz-omr

./: .gitignore  CLAUDE.md  Justfile  README.md  comprehensive_test.py  comprehensive_test_results.json  demo_synthetic.py  example_quiz_with_markers.typ  fiducial_experiments.typ  fuzz_test_omr.py  generate_markers.py  generate_random_tests.py  generate_test_data.typ  generate_test_suite.typ  in-class-question.html  in-class-question.md  main.py  omr_detector.py  omr_development_notes.md  pyproject.toml  quiz.typ  quiz_template.typ  random_test_20250826_202248_001.typ  random_test_20250826_202248_002.typ  random_test_20250826_202248_003.typ  random_test_20250826_202248_004.typ  random_test_20250826_202248_005.typ  test_10_debug.typ  test_12_questions.typ  test_8_questions.typ  test_batch_20250826_202248.json  test_detection.py  test_filled.typ  test_final_detector.py  test_improved_detector.py  test_marker_placement.typ  test_positioning.typ  test_random_batch.py  test_results_test_batch_20250826_202248_1756254182.json  test_typst_optimized.py  (+2 more)
.claude/: settings.local.json
fuzz_failures/test_13/: test_13.typ  test_case.json
fuzz_failures/test_15/: test_15.typ  test_case.json
omr/: bracket_detector_final.py  bracket_detector_v2.py  cli.py  debug_detection.py  debug_improved.py  debug_simple.py  detector.py  improved_detector.py  improved_detector_v2.py  simple_bracket_detector.py  test_direct_detection.py  typst_final_detector.py  typst_optimized_detector.py
tests/: test_answer_keys.json  test_bracket_detection.py  test_end_to_end.py
(+2 files in other folders)
